@@ -197,8 +197,15 @@ function getCalendarEvents($connection2, $guid, $xml, $startDayStamp, $endDaySta
             $client->setRedirectUri($googleRedirectUri); // paste the redirect URI where you given in APi Console. You will get the Access Token here during login success
             $client->setDeveloperKey($googleDeveloperKey); // Developer key
             $client->setAccessType('offline');
-            $client->refreshToken($_SESSION[$guid]['googleAPIRefreshToken']);
-            $_SESSION[$guid]['googleAPIAccessToken'] = $client->getAccessToken();
+            if ($_SESSION[$guid]['googleAPIRefreshToken'] == '') {
+                echo "<div class='error'>";
+                echo __($guid, 'Your request failed due to a database error.');
+                echo '</div>';
+            }
+            else {
+                $client->refreshToken($_SESSION[$guid]['googleAPIRefreshToken']);
+                $_SESSION[$guid]['googleAPIAccessToken'] = $client->getAccessToken();
+            }
         }
 
         $getFail = false;
